fix:Fixed button to copy css not showing up on mobile phones

--- a/src/assets/home.css
+++ b/src/assets/home.css
@@ -298,6 +298,6 @@ body {
 
   .lightmode-generatedCssContainer,
   .darkmode-generatedCssContainer {
-    height: 20vh;
+    height: 30vh;
   }
 }
